--- a/js/package.json
+++ b/js/package.json
@@ -9,7 +9,14 @@
     "url": "https://github.com/maartenbreddels/ipywebrtc.git"
   },
   "jupyterlab": {
-    "extension": "lib/labplugin"
+    "extension": "lib/labplugin",
+    "outputDir": "../share/jupyter/labextensions/jupyter-webrtc",
+    "sharedPackages": {
+      "@jupyter-widgets/base": {
+        "bundled": false,
+        "singleton": true
+      }
+    }
   },
   "keywords": [
     "jupyter",
@@ -18,18 +25,21 @@
     "ipywidgets"
   ],
   "scripts": {
-    "prepublish": "webpack",
     "install-test": "npm install && karma start --single-run",
-    "test": "karma start --single-run",
-    "build:lib": "tsc --project .",
-    "prepare": "npm run build:lib",
+    "build": "jlpm run build:js && jlpm run build:labextension && jlpm runbuild:nbextension",
+    "build:js": "tsc",
+    "build:labextension": "jupyter labextension build .",
+    "build:nbextension": "webpack --mode=production",
     "watch": "npm-run-all -p watch:*",
-    "watch:lib": "tsc -w --project .",
-    "watch:nbextension": "webpack --watch"
+    "watch:js": "tsc --watch",
+    "watch:nbextension": "webpack --watch --mode=development",
+    "prepare": "jlpm run build",
+    "test": "karma start --single-run"
   },
   "devDependencies": {
-    "@jupyter-widgets/controls": "^1.4.0",
+    "@jupyter-widgets/controls": "^1.4.0 || ^2 || ^3",
     "@jupyterlab/services": "^2.0.3",
+    "@jupyterlab/builder": "^3.0.0",
     "@types/chai": "^4.1.4",
     "@types/expect.js": "^0.3.29",
     "@types/mocha": "^5.2.4",
@@ -54,16 +64,16 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.0.8"
+    "typescript": "^3.5.2",
+    "webpack": "^5",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.0 || ^2.0 || ^3.0",
+    "html2canvas": "v1.0.0-alpha.12",
     "mqtt": "^2.11.0",
     "underscore": "^1.8.3",
-    "webrtc-adapter": "^4.2.2",
-    "html2canvas": "v1.0.0-alpha.12"
+    "webrtc-adapter": "^4.2.2"
   },
   "files": [
     "dist/",
